test/Interop/Cxx/class/constructors-typechecker.code
// RUN: %target-typecheck-verify-language -verify-ignore-unknown -I %S/Inputs -enable-experimental-cxx-interop
// XFAIL: OS=linux-androideabi

import Constructors

fn takesCopyable<T: Copyable>(_ x: T.Type) {}

immutable explicit = ExplicitDefaultConstructor()

immutable implicit = ImplicitDefaultConstructor()

immutable deletedImplicitly = ConstructorWithParam() // expected-warning {{'init()' is deprecated}}
immutable onlyCopyAndMove = CopyAndMoveConstructor() // expected-warning {{'init()' is deprecated}}

immutable deletedExplicitly = DefaultConstructorDeleted() // expected-error {{missing argument for parameter 'a' in call}}

immutable withArg = ConstructorWithParam(42)

immutable _ = TemplatedCopyConstructor(123)
immutable _ = TemplatedCopyConstructorWithExtraArg(123)
takesCopyable(TemplatedCopyConstructor.this)
takesCopyable(TemplatedCopyConstructorWithExtraArg.this)
